workshop03/mydb.yaml
---
kind: Namespace
apiVersion: v1

metadata:
  name: myns
  labels:
    app: myapp

---
kind: Deployment
apiVersion: apps/v1

metadata:
  name: mydb-deployment
  labels:
    app: mydb
    version: v1

spec:
    replicas: 1
    selector:
        matchLabels:
            app: mydb-pod
            version: v1
    template:
        metadata:
            name: mydb-pod
            labels:
                app: mydb-pod
                version: v1
        spec:
            volumes:
            - name: mydb-vol
              persistentVolumeClaim: 
                claimName: mydb-pvc
            containers:
            - name: mydb
              image: stackupiss/northwind-db:v1
              imagePullPolicy: Always
              ports:
              - name: mysql-port
                containerPort: 3306
              volumeMounts:
              - name: mydb-vol
                mountPath: /var/lib/mysql

---
kind: Service
apiVersion: v1

metadata:
  name: mydb-svc
  namespace: myns
  labels:
    app: mydb-svc

spec:
  type: ClusterIP
  selector:
    app: mydb-pod
  ports:
  - name: mydb-svc-port
    port: 3306
    targetPort: mysql-port
