workshop03/myapp-ing-host.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1

metadata:
  name: myapp-ing
  namespace: myns
  labels:
    name: myapp-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    

spec:
  rules:
  - host: myapp.com
      paths:
      - path: /customer(/|$)(.*)
        backend:
          serviceName: myapp-svc.myns.svc.cluster.local
          servicePort: 80
      - path: /
        backend:
          serviceName: fortune-svc
          servicePort: 3000
